--- a/home.html
+++ b/home.html
@@ -179,5 +179,13 @@
           </div>
          </div>
     </div>
+
+    
+
+
+
+    <!-- yaxye sections -->
+               <a href="CV park.html" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">click here</a>
+     
 </body>
 </html>
