--- a/hotel_list.html
+++ b/hotel_list.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="ml-[600px] font-semibold mt-[-50px] text-[40px]">
-                            <h1>g<span class="text-[#8DD3BB]">e</span>lobe</h1>
+                            <h1><a href="home.html">g<span class="text-[#8DD3BB]">e</span>lobe</a></h1>
 
             </div>
 
