--- a/home.html
+++ b/home.html
@@ -255,6 +255,35 @@
 
 
             </div>
+
+
+
+          
     </div>
+
+    <div class="flex mt-7 bg-[#0F298B] text-[white] w-full h-[312.28px] gap-14 px-24 py-24  pt-16 pb-10">
+            <div>
+            <h1 class="font-bold">Dee’s Estate </h1>
+            <p class="text-gray-300">Solution for easy and flexible house hunting.You can trust us anywhere through this platform </p>
+        </div>
+        <div class="w-44">
+            <h1>Property  </h1>
+            <p>Learning Modules</p>
+            <p>Partnership</p>
+            <p>Watch demo</p>
+            <p>Event </p>
+        </div>
+        <div>
+            <h1>Dee’s Estate </h1>
+            <p>Solution for easy and flexible house hunting.You can trust us anywhere through this platform </p>
+        </div>
+        <div>
+            <h1>Dee’s Estate </h1>
+            <p>Solution for easy and flexible house hunting.You can trust us anywhere through this platform </p>
+        </div>
+        
+
+      </div>
+
 </body>
 </html>
