responsive page sign up

--- a/sign up.html
+++ b/sign up.html
@@ -10,47 +10,47 @@
 </head>
 <body>
    
-    <div class="flex ml-20 mt-4 ">
+    <div class="flex flex-col sm:flex-row md:flex-row ml-20 mt-4 ">
 
-        <img class="w-[356px] h-[566px] object-cover rounded-md" src="images/image pag3 -2.png" alt="">
-        <div class="ml-14 " >
-            <h1 class="font-bold text-[30px] mb-6">GLOBE</h1>
+        <img class="w-[400px] h-[360px] md:w-[400px] md:h-[500px] sm:w-[400px] sm:h-[500px] -ml-11 sm:ml-10 md:ml-10 sm:mt-5  object-cover rounded-md" src="images/image pag3 -2.png" alt="">
+        <div class="-ml-14 sm:ml-14 md:ml-14 mt-5" >
+            <h1 class="font-bold text-[30px] text-center sm:text-left mb-32 sm:mb-16 mt-2">GLOBE</h1>
             
-            <h1 class="font-bold text-[20px] -mt-7 ">sign up</h1>
-            <p class="font-light mb-6">Let's get you all st up so you can access your personal account.</p>
-            <form class="">
-                <div class="flex gap-11">
+            <h1 class="font-bold text-[20px] -mt-32 sm:-mt-16 md:-mt-16">sign up</h1>
+            <p class="font-light mb-6 sm:mb-2 md:mb-2">Let's get you all st up so you can access your personal account.</p>
+            <form>
+                <div class="flex gap-11 w-[200px]  sm:w-[500px] md:w-[500px] ">
                 <!-- <input class="mb-4 " type="text" placeholder="Enter First Name"> -->
-                <input class="ring-2 text-[grey]  w-72 rounded-lg p-2 mb-5" type="text" placeholder="Enter First Name"">
+                <input class="ring-2 text-black w-72 rounded-lg p-2 mb-5" type="text" placeholder="Enter First Name"">
                 <!-- <input type="text" placeholder="Enter last Name"> -->
-                <input class="ring-2 text-[grey]  w-72 rounded-lg p-2 mb-5" type="text" placeholder="Enter last Name"">
+                <input class="ring-2 text-black  w-72 rounded-lg p-2 mb-5" type="text" placeholder="Enter last Name"">
                 </div>
 
-                <div class="flex gap-11">
+                <div class="flex gap-11 w-[200px] sm:w-[500px] md:w-[500px]">
                 <!-- <input class="mb-4 " type="text" placeholder="Enter First Name"> -->
-                <input class="ring-2 text-[grey]  w-72 rounded-lg p-2 mb-5" type="text" placeholder="Enter E-mail"">
+                <input class="ring-2 text-black  w-72 rounded-lg p-2 mb-5 " type="text" placeholder="Enter E-mail"">
                 <!-- <input type="text" placeholder="Enter last Name"> -->
-                <input class="ring-2 text-[grey]  w-72 rounded-lg p-2 mb-5" type="text" placeholder="Enter phone number"">
+                <input class="ring-2 text-black  w-72 rounded-lg p-2 mb-5 " type="text" placeholder="Enter phone number"">
                 </div>
                 
                 <!-- password  -->
                  <div>
-                <input class="ring-2 text-[grey]  w-[700px] rounded-lg p-2 mb-5" type="text" placeholder="Enter password"">
-                 </div>
+                <input class="ring-2 text-black  w-[440px] sm:w-[650px] md:w-[650px]  rounded-lg p-2 mb-5 sm:mb-3" type="text" placeholder="Enter password"">
+                 </div> 
 
                  <!-- confirm password -->
                   <div>
-                <input class="ring-2 text-[grey]  w-[700px] rounded-lg p-2 mb-5" type="text" placeholder="confirm password"">
+                <input class="ring-2 text-black  w-[440px]  sm:w-[650px] md:w-[650px] rounded-lg p-2 mb-5 sm:mb-3" type="text" placeholder="confirm password"">
                  </div>
 
                  <div>
                     <input type="radio">
                     <label>I agree to all the Terms and Privacy Policies</label>
                  </div>
-                 <button class="bg-[#337833] text-white w-full px-3 mx-3 pb-3 pt-3 mt-5">Create account</button>
+                 <button class="bg-[#337833] text-white w-[400px] sm:w-[630px] px-3 mx-3 pb-3 pt-3 mt-5">Create account</button>
                  <p class="text-center">Already have an account? Login</p>
                  <p class="font-thin text-center mt-4">-----------------Or Sign up with----------------</p>
-                 <div class="flex gap-48 ml-20 mt-5">
+                 <div class="flex  gap-36 sm:gap-48 md:gap-48 ml-20 mt-5">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-google-plus-g"></i>
                     <i class="fa-brands fa-apple"></i>
@@ -58,5 +58,55 @@
             </form>
         </div>
     </div>
+
+    <!-- footer section  -->
+    <div class="flex flex-col md:flex-row flex-wrap bg-[#6ad8b1] w-full gap-10 px-6 md:px-24 py-10 mt-10 text-sm">
+    <div>
+      <h1 class="font-bold text-lg mb-2">GLOBE</h1>
+    </div>
+
+    <div class="flex gap-4 mt-2 md:mt-10">
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-square-twitter"></i>
+      <i class="fa-brands fa-square-instagram"></i>
+      <i class="fa-brands fa-square-youtube"></i>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">Our Destinations</h1>
+      <p>Canada</p>
+      <p>Alaska</p>
+      <p>France</p>
+      <p>Iceland</p>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">Our Activities</h1>
+      <p>Northern Lights</p>
+      <p>Cruising & Sailing</p>
+      <p>Multi-activities</p>
+      <p>Kayaking</p>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">Travel Blogs</h1>
+      <p>Bali Travel Guide</p>
+      <p>Sri Lanka Travel Guide</p>
+      <p>Peru Travel Guide</p>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">About Us</h1>
+      <p>Our Story</p>
+      <p>Work with Us</p>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">Contact Us</h1>
+      <p>Email Us</p>
+      <p>Help Center</p>
+    </div>
+  </div>
+
 </body>
 </html>
