--- a/loging.html
+++ b/loging.html
@@ -32,5 +32,55 @@
             <img class="w-[400px] h-[490px]" src="images/diyaard.png" alt="">
         </div>
     </div>
+
+
+    <!-- footer section  -->
+     <div class="flex flex-col md:flex-row flex-wrap bg-[#6ad8b1] w-full gap-10 px-6 md:px-24 py-10 mt-10 text-sm">
+    <div>
+      <h1 class="font-bold text-lg mb-2">GLOBE</h1>
+    </div>
+
+    <div class="flex gap-4 mt-2 md:mt-10">
+      <i class="fa-brands fa-square-facebook"></i>
+      <i class="fa-brands fa-square-twitter"></i>
+      <i class="fa-brands fa-square-instagram"></i>
+      <i class="fa-brands fa-square-youtube"></i>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">Our Destinations</h1>
+      <p>Canada</p>
+      <p>Alaska</p>
+      <p>France</p>
+      <p>Iceland</p>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">Our Activities</h1>
+      <p>Northern Lights</p>
+      <p>Cruising & Sailing</p>
+      <p>Multi-activities</p>
+      <p>Kayaking</p>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">Travel Blogs</h1>
+      <p>Bali Travel Guide</p>
+      <p>Sri Lanka Travel Guide</p>
+      <p>Peru Travel Guide</p>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">About Us</h1>
+      <p>Our Story</p>
+      <p>Work with Us</p>
+    </div>
+
+    <div>
+      <h1 class="font-bold mb-1">Contact Us</h1>
+      <p>Email Us</p>
+      <p>Help Center</p>
+    </div>
+  </div>
 </body>
 </html>
