upfate cv park page

--- a/CV park.html
+++ b/CV park.html
@@ -12,10 +12,11 @@
 <body>
     
 
+
     <!-- page three (3)-->
     
 <!-- Responsive Header Section -->
-<div class="sm:w-full h-[60px] bg-white shadow-md flex items-center justify-between px-4 sm:px-8">
+<div class=" sm:w-full h-[60px] bg-white shadow-md flex items-center justify-between px-4 sm:px-8">
   
   <!-- Left: Navigation -->
   <div class="flex items-center gap-4">
@@ -75,13 +76,13 @@
         <div class="flex gap-5 ml-2 sm:ml-[770px] md:ml-[770px] w-[200px] h-10 ">
             <button  class=" ring-1 px-1 mx-1"><i class="fa-solid fa-heart"></i></button>
             <button  class=" ring-1 px-1 mx-1" ><i class="fa-solid fa-share-nodes"></i></button>
-            <button class="  bg-slate-600 text-white rounded-md pt-1 pl-2 pr-2 pb-1">Book now</button>
+            <button class="  bg-slate-600 text-white rounded-md pt-1 pl-2 pr-2 pb-1 mr-5">Book now</button>
         </div>
      </div>
-     <!-- images -->
-      <div class="flex gap-2 mt-4 sm:ml-24 md:ml-24 ml-3 ">
-        <img class="w-[300px] h-[300px] sm:w-[590px] sm:h-[400px] md:w-[590px] md:h-[400px] " src="images/image page 3-1.png" alt="">
-        <div class="grid grid-rows-1 sm:grid sm:grid-cols-2 md:grid md:grid-cols-2 gap-1 sm:w-[447px] md:-[447px] w-[200px]">
+     <!-- images -->!
+      <div class="sm:flex   gap-2 mt-4 sm:ml-24 md:ml-24 ml-1 ">
+        <img class="w-[480px] h-[300px] sm:w-[590px] sm:h-[400px] md:w-[590px] md:h-[400px] " src="images/image page 3-1.png" alt="">
+        <div class="grid grid-cols-2 sm:grid sm:grid-cols-2 md:grid md:grid-cols-2 gap-1 sm:w-[447px] md:-[447px] w-[480px]">
             <img src="images/image pag3 -2.png" alt="">
             <img src="images/Rectangle 6.png" alt="">
             <img src="images/Rectangle 5.png" alt="">
@@ -289,7 +290,7 @@
 
              <!-- section reviews  -->
               <div class="mt-11 text-[13px]">
-                <div class="flex sm:gap-[700px] md:gap-[700px] ml-16">
+                <div clas!s="flex sm:gap-[700px] md:gap-[700px] ml-16">
                     <h1>Reviews</h1>
                     <button class="bg-[#4f824f] text-white px-3 mx-3 rounded-sm">Give your review</button>
                 </div>
