last update sign up

--- a/loging.html
+++ b/loging.html
@@ -26,7 +26,7 @@
 
   <!-- Center: Logo -->
   <h1 class="text-[22px] sm:text-[30px] font-semibold text-center">
-    <a href="home.html">golobe</a>
+    <a href="index.html">golobe</a>
   </h1>
 
   <!-- Right: User Info -->
