--- a/sign up.html
+++ b/sign up.html
@@ -9,6 +9,35 @@
  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
+     <!-- Responsive Header Section -->
+<div class=" sm:w-full h-[60px] bg-white shadow-md flex items-center justify-between px-4 sm:px-8">
+  
+  <!-- Left: Navigation -->
+  <div class="flex items-center gap-4">
+    <div class="flex items-center gap-1">
+      <i class="fa-solid fa-plane text-sm"></i>
+      <p class="text-[11px] sm:text-[12px] font-semibold hidden sm:block">Find Flight</p>
+    </div>
+    <div class="flex items-center gap-1">
+      <i class="fa-solid fa-car text-sm hidden sm:block"></i>
+      <p class="text-[11px] sm:text-[12px] font-semibold hidden  sm:block">Find Stays</p>
+    </div>
+  </div>
+
+  <!-- Center: Logo -->
+  <h1 class="text-[22px] sm:text-[30px] font-semibold text-center">
+    <a href="index.html">golobe</a>
+  </h1>
+
+  <!-- Right: User Info -->
+  <div class="flex items-center gap-2 sm:gap-3">
+    <i class="fa-solid fa-heart text-sm"></i>
+    <p class="text-[11px] sm:text-[12px] font-medium">Favourites</p>
+    <img class="w-9 h-9 rounded-full" src="booking-img/img1.jpg" alt="User Avatar">
+    <p class="text-[11px] sm:text-[12px] font-medium">John D</p>
+  </div>
+</div>
+
    
     <div class="flex flex-col sm:flex-row md:flex-row ml-20 mt-4 ">
 
