--- a/add new card.html
+++ b/add new card.html
@@ -7,8 +7,16 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-800 bg-opacity-70 flex items-center justify-center h-screen">
+
+
+
+
   <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-md">
-    <h2 class="text-lg font-bold mb-4">Add a new Card</h2>
+    <div class="flex gap-16">
+      <h2 class="text-lg font-bold mb-4">Add a new Card</h2>
+    <button class="bg-green-400 text-white px-2 mx-5"><a href="index.html">Globe</a></button>
+    </div>
+    
 
     <form class="space-y-4">
       <div>
