--- a/sign up.html
+++ b/sign up.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- footer section  -->
-    <div class="flex flex-col md:flex-row flex-wrap bg-[#6ad8b1] w-full gap-10 px-6 md:px-24 py-10 mt-10 text-sm">
+    <div class="flex flex-row md:flex-row flex-wrap bg-[#6ad8b1] w-full gap-10 px-6 md:px-24 py-10 mt-10 text-sm">
     <div>
       <h1 class="font-bold text-lg mb-2">GLOBE</h1>
     </div>
